setup python app
